# weldx-widgets

./: .gitignore  .pre-commit-config.yaml  .ruff.toml  CHANGELOG.md  CITATION.cff  LICENSE  MANIFEST.in  README.md  WidgetGMAW.py  conftest.py  demo.ipynb  generic.py  groove_selection_dashboard.ipynb  pyproject.toml  setup.cfg  setup.py  video.py  widget_base.py  widget_factory.py  widget_gas.py  widget_gmaw.py  widget_groove_sel.py  widget_measurement.ipynb  widget_measurement.py  widget_scans.py  widget_video.py
.github/workflows/: pytest.yml  static_analysis.yml
weldx_widgets/: .gitignore  __init__.py  generic.py  translation_utils.py  widget_base.py  widget_evaluate.py  widget_factory.py  widget_gas.py  widget_gmaw.py  widget_groove_sel.py  widget_measurement.py  widget_roboter_prog.py  widget_scans.py  widget_weldx_file.py
weldx_widgets/kisa/: __init__.py  load.py  save.py  widget_robot_program.py  widget_scans.py  widget_video.py
weldx_widgets/locale/de/LC_MESSAGES/: base.po
weldx_widgets/locale/en/LC_MESSAGES/: base.po
weldx_widgets/tests/: conftest.py  test_eval.py  test_gas.py  test_generic.py  test_groove_sel.py  test_k3d.py  test_process.py  test_save.py  test_visualization.py  util.py
weldx_widgets/visualization/: __init__.py  colors.py  csm_k3d.py  csm_mpl.py  types.py
