[metadata]
name = weldx_widgets
author = "Martin K. Scherer <martin.scherer@bam.de>, Cagtay Fabry <cagtay.fabry@bam.de>"
author_email = "martin.scherer@bam.de"
home_page = https://www.bam.de/weldx
description = Python based widgets for the weldx core package
long_description = file: README.md
long_description_content_type = text/markdown
license = BSD License
license_file = LICENSE
platform = any
keywords =
    welding
    weldx
    bam
classifiers =
    Development Status :: 3 - Alpha
    Intended Audience :: Science/Research
    License :: OSI Approved :: BSD License
    Operating System :: OS Independent
    Natural Language :: English
    Programming Language :: Python
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Topic :: Scientific/Engineering :: Physics
project_urls =
    Documentation = https://weldx.readthedocs.io
    Source Code = https://github.com/BAMweldx/weldx-widgets
    Bug Tracker = https://github.com/BAMweldx/weldx-widgets/issues
#    Changelog = https://github.com/BAMweldx/weldx/blob/master/CHANGELOG.md

[options]
packages = find:
python_requires = >=3.8
setup_requires =
    setuptools >=38.3.0
    setuptools_scm
install_requires =
    weldx @ git+https://github.com/BAMWeldX/weldx@e011e4ed52694e2777266a5fd167aad8abd9fad8#egg=weldx
    ipywidgets
    k3d
    ipympl

[options.extras_require]
test =
    pytest
    pytest-cov
    pytest-xdist

[flake8]
# see weldx formatting
ignore =
    W503,W504,  # line break after binary operator
    E203        # E203 whitespace before ':' (not PEP8 compliant anyway)
max-line-length = 88
select = C,E,F,W,B,B950 # black formatting options
exclude =
    __init__.py,

[pydocstyle]
# convention numpy is currently equivalent to ignoring 'D107', 'D203', 'D212', 'D213', 'D402', 'D413'
convention = numpy
match = (?!__)(?!_version)(?!conftest).*\.py
match_dir = [^\.][^\docs].*

[isort]
profile = black
default_section = THIRDPARTY
known_first_party = weldx,weldx_widgets
sections = FUTURE,STDLIB,THIRDPARTY,FIRSTPARTY,LOCALFOLDER


[tool.pytest]
python_files = *.py
